<resources>
    <string name="app_name">SaveContactToDatabase</string>
    <string name="title_activity_add_contact">Activity_add_contact</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add_contact">Add contact</string>
    <string name="bsis_contact_app">BSIS CONTACT APP</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="mobile">Mobile</string>
    <string name="email">Email</string>
    <string name="image">image</string>
    <string name="save_contact">Save Contact</string>

    <string name="contact_list">Contact List</string>
    <string name="profile_image">profile_image</string>
    <string name="ilori_abdulrasheed">Ilori AbdulRasheed</string>
    <string name="image_dial_icon">image_dial_icon</string>
    <string name="_08058867077">08058867077</string>
    <string name="image_video_icon">image_video_icon</string>
    <string name="image_msg_icon">image_msg_icon</string>
    <string name="personal">personal</string>
    <string name="image_email_icon">image_email_icon</string>
    <string name="_3dots">3dots</string>
    <string name="back">back</string>
    <string name="star">star</string>
    <string name="update_contact">UPDATE CONTACT</string>
    <string name="update">update</string>
</resources>