<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DisplayContact">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        app:cardCornerRadius="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:transitionName="fly"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:background="@drawable/img"
            tools:srcCompat="@tools:sample/avatars"
            android:contentDescription="@string/profile_image"/>
    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/textName"
        android:layout_width="368dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:padding="5dp"
        android:text=""
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView3" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_tel"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textName">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/imageButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/image_dial_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_call_24" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="170dp"
                android:layout_height="23dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                android:gravity="start"
                android:paddingStart="1dp"
                android:paddingEnd="1dp"
                android:text="@string/_08058867077"
                android:textColor="@color/purple_700"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/imageButton5"
                app:layout_constraintHorizontal_bias="0.235"
                app:layout_constraintStart_toEndOf="@+id/imageButton3"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/imageButton5"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="2dp"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/image_video_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/imageButton8"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_videocam_24" />

            <ImageButton
                android:id="@+id/imageButton8"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/image_msg_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_message_24" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="111dp"
                android:layout_height="18dp"
                android:layout_marginStart="52dp"
                android:gravity="start"
                android:text="@string/mobile"
                android:textSize="11sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageButton3" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="5dp"
        app:cardElevation="10dp"
        app:layout_constraintTop_toBottomOf="@+id/cardView_tel"
        tools:layout_editor_absoluteX="41dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/email_text"
                android:layout_width="275dp"
                android:layout_height="19dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:paddingStart="1dp"
                android:paddingEnd="1dp"
                android:text="@string/email"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textColor="@color/purple_700"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.541"
                app:layout_constraintStart_toEndOf="@+id/imageButton10"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="173dp"
                android:layout_height="16dp"
                android:layout_marginBottom="4dp"
                android:paddingStart="8dp"
                android:paddingEnd="1dp"
                android:text="@string/personal"
                android:textSize="11sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.34"
                app:layout_constraintStart_toEndOf="@+id/imageButton10" />

            <ImageButton
                android:id="@+id/imageButton10"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:backgroundTint="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_mail_24"
                android:contentDescription="@string/image_email_icon"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <ImageButton
        android:id="@+id/imageButton12"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="2dp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/star"
        app:layout_constraintEnd_toStartOf="@+id/imageButton14"
        app:layout_constraintHorizontal_bias="0.958"
        app:layout_constraintStart_toEndOf="@+id/backButton"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_star_24" />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

    <ImageButton
        android:id="@+id/imageButton14"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/_3dots"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_more_vert_24" />


</androidx.constraintlayout.widget.ConstraintLayout>