<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_margin="10dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.081">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardview_edit"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">


                        <ImageButton
                            android:id="@+id/backBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/update"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="50dp"
                            android:text="@string/update_contact"
                            android:textSize="16sp"
                            android:padding="10dp"
                            android:textStyle="bold"
                            android:textAlignment="center"
                            tools:layout_editor_absoluteX="55dp"
                            tools:layout_editor_absoluteY="4dp" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/cardview1"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="10dp"
                    app:layout_constraintTop_toBottomOf="@id/cardview_edit">
                <EditText
                    android:id="@+id/edit_firstname"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:hint="@string/first_name"
                    android:autofillHints="email Address"
                    android:inputType="text"
                    android:text="" />
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/cardview2"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="10dp"
                    app:layout_constraintTop_toBottomOf="@id/cardview1">
                    <EditText
                        android:id="@+id/edit_lastname"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:ems="10"
                        android:hint="@string/last_name"
                        android:autofillHints="email Address"
                        android:inputType="text"
                        android:text="" />
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/cardview3"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="10dp"
                    app:layout_constraintTop_toBottomOf="@id/cardview2">
                    <EditText
                        android:id="@+id/edit_mobile"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:ems="10"
                        android:hint="@string/mobile"
                        android:autofillHints="phone"
                        android:inputType="phone"
                        android:text="" />
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/cardview4"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="10dp"
                    app:layout_constraintTop_toBottomOf="@id/cardview3">
                    <EditText
                        android:id="@+id/edit_email"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:ems="10"
                        android:hint="@string/email"
                        android:autofillHints="email Address"
                        android:inputType="textEmailAddress"
                        android:text="" />
                </androidx.cardview.widget.CardView>

                <Button
                    android:id="@+id/updateBtn"
                    android:layout_width="356dp"
                    android:layout_height="56dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/update"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cardview4" />

            </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>